<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/group_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <RadioButton
            android:id="@+id/online"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/recent_online_small"
            android:paddingLeft="40dp"
            android:text="@string/online"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/busy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/recent_busy_small"
            android:paddingLeft="40dp"
            android:text="@string/busy"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/away"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/recent_away_small"
            android:paddingLeft="40dp"
            android:text="@string/away"
            android:textColor="#FFFFFF"
            android:textSize="12sp" />
    </RadioGroup>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="#AAFFFFFF" />

    <TextView
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/logout"
        android:textColor="#FFFFFF" />

</LinearLayout>