<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/iv_callLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_margin="30dp"
        android:src="@drawable/call_logo4" />

    <FrameLayout
        android:id="@+id/call_info_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_callLog"
        android:layout_margin="5dp" >

        <include layout="@layout/call_info_layout" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/call_info_layout"
        android:layout_margin="5dp"
        android:paddingTop="10dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_red"
            android:text="@string/btn_cancel"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_green"
            android:text="@string/call_sure"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="gone" />

        <Button
            android:id="@+id/btn_refuse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/selector_btn_red"
            android:text="@string/call_refuse"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >

        <include layout="@layout/call_bar_layout" />
    </LinearLayout>

    <include
        android:id="@+id/call_twince_view"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="65dp"
        android:layout_marginLeft="10.66dp"
        android:layout_marginRight="10.66dp"
        android:layout_marginTop="48dp"
        layout="@layout/call_phone_twince"
        android:visibility="gone" />

</RelativeLayout>